<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AboutLibraries Sample</string>

    <string name="action_manifestactivity">Manifest Activity</string>
    <string name="action_minimalactivity">Minimal Activity</string>
    <string name="action_extendactivity">Extended Activity</string>
    <string name="action_customsortactivity">Custom Sort Activity</string>
    <string name="action_customactivity">Custom Activity</string>

    <string name="action_all">(Cust) All Libraries</string>
    <string name="action_internal">(Cust) Internal Libraries</string>
    <string name="action_external">(Cust) External Libraries</string>
    <string name="action_defined">(Cust) Defined Libraries</string>

    <string name="action_opensource">Open Source</string>

    <!-- HereSDK Licence Agreement -->
    <string name="define_license_herelicense" translatable="false"></string>
    <string name="license_herelicense_licenseName" translatable="false">Here SDK</string>
    <string name="license_herelicense_licenseWebsite" translatable="false">https://developer.here.com/products/here-sdk</string>
    <string name="license_herelicense_licenseShortDescription" translatable="false">
        <![CDATA[
            <p>Here SDK is a Location Service to enhance apps with rich maps and location context.</p>
        ]]>
    </string>
    <string name="license_herelicense_licenseDescription" translatable="false">raw:license_here</string>


    <string name="define_plu_here_sdk" translatable="false"></string>
    <string name="library_here_sdk_author" translatable="false">Here Author</string>
    <string name="library_here_sdk_libraryName" translatable="false">AAA Here SDK</string>
    <string name="library_here_sdk_libraryDescription" translatable="false">Here SDK</string>
    <string name="library_here_sdk_libraryVersion" translatable="false">1.1.0</string>
    <string name="library_here_sdk_libraryArtifactId" translatable="false">xyz</string>
    <string name="library_here_sdk_libraryWebsite" translatable="false">xyz</string>
    <string name="library_here_sdk_licenseIds" translatable="false">herelicense</string>
    <string name="library_here_sdk_licenseId" translatable="false">herelicense</string>
    <string name="library_here_sdk_isOpenSource" translatable="false">true</string>
    <string name="library_here_sdk_repositoryLink" translatable="false">http://here.com</string>

</resources>
