<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_manifestactivity"
        android:title="@string/action_manifestactivity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_minimalctivity"
        android:title="@string/action_minimalactivity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_extendactivity"
        android:title="@string/action_extendactivity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_customsortactivity"
        android:title="@string/action_customsortactivity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_customactivity"
        android:title="@string/action_customactivity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_opensource"
        android:title="@string/action_opensource"
        app:showAsAction="never" />
</menu>
